Add API for todo and make the connect use env to deploy on server
