# src/features/task-manager/rootNodes/root.node.validation.ts
@@ -1,0 +1,13 @@
+import { z } from "zod";
+import mongoose from "mongoose";
+
+export const createRootNodeSchema = z.object({
+  title: z.string().min(1, "Title cannot be empty"),
+  department: z.string().min(1, "Department is required"),
+  owner: z.string().min(1, "Owner is required"),
+});
+
+export const updateRootNodeSchema = createRootNodeSchema.partial()
+
+export type CreateRootInput = z.infer<typeof createRootNodeSchema>
+export type UpdateRootInput = z.infer<typeof updateRootNodeSchema>
