# src/features/todo/todo.routes.ts
@@ -1,40 +1,31 @@
-import express from "express";
-import TodoList from "./todo.model.js";
-import { redisClient } from "../../shared/db/redisConnection.js";
+import { Router } from "express";
+import {
+  getTodos,
+  createTodos,
+  editTodos,
+  deleteTodos,
+} from "./todo.controller.js";
 
-const router = express.Router();
+const router = Router();
 
-router.get("/", async (req, res) => {
+router.get("/", (req, res, next) => {
   // #swagger.tags = ['Todo']
-  // #swagger.description = 'Retrieve all todo items from the database'
-  try {
-    let cachedTodos = null;
-    try {
-      if (redisClient.isOpen) {
-        cachedTodos = await redisClient.get("todos_cache");
-      }
-    } catch (redisError) {
-      console.error("Redis Get Error:", redisError);
-    }
+  next();
+}, getTodos);
 
-    if (cachedTodos) {
-      console.log("Sending data from Redis Cache");
-      return res.json(JSON.parse(cachedTodos));
-    }
-    const todos = await TodoList.find();
+router.post("/", (req, res, next) => {
+  // #swagger.tags = ['Todo']
+  next();
+}, createTodos);
 
-    try {
-      if (redisClient.isOpen) {
-        await redisClient.setEx("todos_cache", 60, JSON.stringify(todos));
-      }
-    } catch (redisError) {
-      console.error("Redis Set Error:", redisError);
-    }
+router.put("/:id", (req, res, next) => {
+  // #swagger.tags = ['Todo']
+  next();
+}, editTodos);
 
-    res.json(todos);
-  } catch (error: any) {
-    res.status(500).json({ message: error.message });
-  }
-});
+router.delete("/:id", (req, res, next) => {
+  // #swagger.tags = ['Todo']
+  next();
+}, deleteTodos);
 
 export default router;
